# dynheiros

./: .gitignore  README.md  atualizar_planilhas.py  banco_de_dados.py  carregar_dados.py  cobranca.sqlite  configuracoes.py  dados.ods  dinheiros.py  dinheiros.yaml  dynheiros.py  emitir_notas.py  encerrar-libreoffice.py  enviar-email.py  enviar_emails.py  extensos.py  gerar_documentos.py  gerar_relatorios.py  inserir-linha.py  pyproject.toml  testes.ipynb
situacao/a/: Academia Furia.ods  Acao Serviços Ibiuna Ltda. - ME.ods  Acos Dias.ods  Adailza.ods  Adriana Martins Keder.ods  Agro Comercial Takafuji Ltda..ods  Akari Comercial Ltda. - ME.ods  Amanda.ods  Amor de Casinha.ods  Ana Cecilia.ods  Andre Campos.ods  Anibal.ods  Antonio Alberto Martins da Silva - ME.ods  Aquafit.ods  Aysu.ods  Thumbs.db
situacao/b/: BSA.ods  Bazar Kachimir Ltda. - nova.ods  Big Farma.ods  Thumbs.db
situacao/c/: CCC.ods  CL Prest Serv.ods  Cacau Centro.ods  Cacau Chocolateria.ods  Cacau Container.ods  Campos Materiais Eletricos.ods  Campos Materiais para Construcao.ods  Canova.ods  Carlos Eduardo de Lima.ods  Carlos Gustavo.ods  Casa de Santa Rita.ods  Cl Prest Serv.ods  Claudio Eduardo Camargo - ME.ods  Clinica Odontologica Hissao Takahashi.ods  Clinica Saude Care.ods  Comercio de Carnes JH Ibiunense.ods  Thumbs.db
situacao/d/: Debora.ods  Deleffe.ods  Diniz Odonto.ods  Divina.ods  Dois Amores.ods  Douglas.ods  Dubom.ods  (+5 more)
templates/: aluguel.html  aviso.html  aviso.txt  lbm.html  lbm.txt  minister.html  minister.txt  relatorio.html  takafuji.html
unison_profile/: Atualizar Planilhas.prf
(+229 files in other folders)
