[tool.poetry]
name = "pynheiros"
version = "0.1.0"
description = ""
authors = ["Guto Marcicano <caugmar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
ipython = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
