[tool.poetry]
name = "dynheiros"
version = "0.1.0"
description = ""
authors = ["Guto Marcicano <caugmar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
ipython = "^9.3.0"
yagmail = "^0.15.293"
chevron = "^0.14.0"
bpython = "^0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ipython (>=9.8.0,<10.0.0)", "ptpython (>=3.0.32,<4.0.0)"]
